[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/frames/orc_warrior_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Art/frames/orc_warrior_idle_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://Art/frames/orc_warrior_run_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Art/frames/orc_warrior_run_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://Art/frames/orc_warrior_run_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://Art/frames/orc_warrior_run_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://Art/frames/orc_warrior_idle_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://Art/frames/orc_warrior_idle_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://Mobs/small_orc.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "IDLE",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "WALK",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 8 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 6.35
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 51.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 51.49
radial_accel = 91.09
color = Color( 0.0235294, 0.258824, 0.0196078, 1 )

[node name="orc_warrior" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "IDLE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2 )
shape = SubResource( 2 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 3 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
